added tableview editing actions

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <li>
             <a href="#alamofire">Alamofire and custom structures</a>
         </li>
+
+        <li>
+            <a href="#tableViewAction">Adding Editing actions to table view (slide)</a>
+        </li>
     </ol>
 
 
@@ -60,6 +64,11 @@
         <span class="glyphicon glyphicon-link"></span>
         <a href="https://gist.github.com/jonathanmeguira/916fc948c55edc19547e943a5055146a#file-alamofire-swift">Using
             alamofire</a>
+    </div>
+
+    <div id="tableViewAction" class="container">
+        <h2>Adding editing actions to table views</h2>
+        <script src="https://gist.github.com/jonathanmeguira/a38652d5ae5a9dbe80cf9d0237e5720e.js"></script>
     </div>
 </div>
 
