added login tutorial with rerouting based on server response

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <li>
             <a href="#tableViewAction">Adding Editing actions to table view (slide)</a>
         </li>
+        <li>
+            <a href="#loginWithRouting">Login using POST and re-route the user based on the response</a>
+        </li>
     </ol>
 
 
@@ -69,6 +72,11 @@
     <div id="tableViewAction" class="container">
         <h2>Adding editing actions to table views</h2>
         <script src="https://gist.github.com/jonathanmeguira/a38652d5ae5a9dbe80cf9d0237e5720e.js"></script>
+    </div>
+
+    <div id="loginWithRouting" class="container">
+        <h2>Login using POST and re-route the user based on the response</h2>
+        <script src="https://gist.github.com/jonathanmeguira/7697a03aed9610851d32c86c80eed19d.js"></script>
     </div>
 </div>
 
